hax_jar = jar('hax', [
              	'android/accounts/Account.java',
              	'android/accounts/AccountManager.java',
              	'android/animation/Animator.java',
              	'android/animation/AnimatorInflater.java',
              	'android/animation/AnimatorListenerAdapter.java',
              	'android/animation/LayoutTransition.java',
              	'android/animation/ValueAnimator.java',
              	'android/annotation/PrivateApi.java',
              	'android/annotation/SdkConstant.java',
              	'android/annotation/SuppressLint.java',
              	'android/annotation/TargetApi.java',
              	'android/annotation/Widget.java',
              	'android/app/Activity.java',
              	'android/app/ActivityManager.java',
              	'android/app/AlarmManager.java',
              	'android/app/AlertDialog.java',
              	'android/app/Application.java',
              	'android/app/Dialog.java',
              	'android/app/DownloadManager.java',
              	'android/app/Fragment.java',
              	'android/app/FragmentManager.java',
              	'android/app/FragmentTransaction.java',
              	'android/app/IntentService.java',
              	'android/app/KeyguardManager.java',
              	'android/app/NativeActivity.java',
              	'android/app/NotificationManager.java',
              	'android/app/PendingIntent.java',
              	'android/app/ProgressDialog.java',
              	'android/app/SearchManager.java',
              	'android/app/Service.java',
              	'android/app/SharedPreferencesImpl.java',
              	'android/app/UiModeManager.java',
              	'android/app/WallpaperManager.java',
              	'android/app/admin/DevicePolicyManager.java',
              	'android/content/ActivityNotFoundException.java',
              	'android/content/BroadcastReceiver.java',
              	'android/content/ClipboardManager.java',
              	'android/content/ComponentCallbacks.java',
              	'android/content/ComponentCallbacks2.java',
              	'android/content/ComponentName.java',
              	'android/content/ContentResolver.java',
              	'android/content/ContentValues.java',
              	'android/content/Context.java',
              	'android/content/ContextWrapper.java',
              	'android/content/DialogInterface.java',
              	'android/content/IntentFilter.java',
              	'android/content/Intent.java',
              	'android/content/IntentSender.java',
              	'android/content/OperationApplicationException.java',
              	'android/content/pm/ActivityInfo.java',
              	'android/content/pm/ApplicationInfo.java',
              	'android/content/pm/ComponentInfo.java',
              	'android/content/pm/ConfigurationInfo.java',
              	'android/content/pm/FeatureInfo.java',
              	'android/content/pm/InstrumentationInfo.java',
              	'android/content/pm/ManifestDigest.java',
              	'android/content/pm/PackageInfo.java',
              	'android/content/pm/PackageItemInfo.java',
              	'android/content/pm/PackageManager.java',
              	'android/content/pm/PackageParser.java',
              	'android/content/pm/PackageUserState.java',
              	'android/content/pm/PathPermission.java',
              	'android/content/pm/PermissionGroupInfo.java',
              	'android/content/pm/PermissionInfo.java',
              	'android/content/pm/ProviderInfo.java',
              	'android/content/pm/ResolveInfo.java',
              	'android/content/pm/ServiceInfo.java',
              	'android/content/pm/Signature.java',
              	'android/content/pm/VerifierInfo.java',
              	'android/content/res/AssetFileDescriptor.java',
              	'android/content/res/AssetManager.java',
              	'android/content/res/ColorStateList.java',
              	'android/content/res/CompatibilityInfo.java',
              	'android/content/res/Configuration.java',
              	'android/content/res/Resources.java',
              	'android/content/res/StringBlock.java',
              	'android/content/res/TypedArray.java',
              	'android/content/res/XmlBlock.java',
              	'android/content/res/XmlResourceParser.java',
              	'android/content/ServiceConnection.java',
              	'android/content/SharedPreferences.java',
              	'android/database/Cursor.java',
              	'android/database/ContentObserver.java',
              	'android/database/DataSetObservable.java',
              	'android/database/DataSetObserver.java',
              	'android/database/Observable.java',
              	'android/database/sqlite/DatabaseErrorHandler.java',
              	'android/database/sqlite/SQLiteCursorDriver.java',
              	'android/database/sqlite/SQLiteCursor.java',
              	'android/database/sqlite/SQLiteDatabase.java',
              	'android/database/sqlite/SQLiteDirectCursorDriver.java',
              	'android/database/sqlite/SQLiteException.java',
              	'android/database/sqlite/SQLiteOpenHelper.java',
              	'android/database/sqlite/SQLiteProgram.java',
              	'android/database/sqlite/SQLiteQuery.java',
              	'android/gesture/GestureOverlayView.java',
              	'android/gesture/GestureStore.java',
              	'android/graphics/BitmapFactory.java',
              	'android/graphics/Bitmap.java',
              	'android/graphics/Canvas.java',
              	'android/graphics/Color.java',
              	'android/graphics/Matrix.java',
              	'android/graphics/Paint.java',
              	'android/graphics/Path.java',
              	'android/graphics/Point.java',
              	'android/graphics/PointF.java',
              	'android/graphics/PorterDuff.java',
              	'android/graphics/PorterDuffColorFilter.java',
              	'android/graphics/PorterDuffXfermode.java',
              	'android/graphics/RectF.java',
              	'android/graphics/Rect.java',
              	'android/graphics/Region.java',
              	'android/graphics/Typeface.java',
              	'android/graphics/Xfermode.java',
              	'android/graphics/drawable/AnimationDrawable.java',
              	'android/graphics/drawable/BitmapDrawable.java',
              	'android/graphics/drawable/ColorDrawable.java',
              	'android/graphics/drawable/Drawable.java',
              	'android/graphics/drawable/GradientDrawable.java',
              	'android/graphics/drawable/LayerDrawable.java',
              	'android/graphics/drawable/Animatable.java',
              	'android/hardware/display/DisplayManager.java',
		'android/hardware/input/InputManager.java',
              	'android/hardware/SensorEvent.java',
              	'android/hardware/SensorEventListener.java',
              	'android/hardware/Sensor.java',
              	'android/hardware/SensorManager.java',
              	'android/hardware/usb/UsbManager.java',
              	'android/location/Criteria.java',
              	'android/location/Location.java',
              	'android/location/LocationListener.java',
              	'android/location/LocationManager.java',
              	'android/Manifest.java',
              	'android/media/AudioManager.java',
              	'android/media/AudioTrack.java',
              	'android/media/MediaPlayer.java',
              	'android/media/MediaRouter.java',
              	'android/media/SoundPool.java',
              	'android/net/ConnectivityManager.java',
              	'android/net/NetworkInfo.java',
              	'android/net/Uri.java',
              	'android/net/wifi/WifiManager.java',
              	'android/net/wifi/p2p/WifiP2pManager.java',
              	'android/nfc/NfcManager.java',
              	'android/opengl/EGLConfig.java',
              	'android/opengl/EGLObjectHandle.java',
              	'android/opengl/GLES20.java',
              	'android/opengl/GLSurfaceView.java',
              	'android/opengl/Matrix.java',
              	'android/os/AsyncTask.java',
              	'android/os/Binder.java',
              	'android/os/Build.java',
              	'android/os/Bundle.java',
              	'android/os/CancellationSignal.java',
              	'android/os/Debug.java',
              	'android/os/DropBoxManager.java',
              	'android/os/Environment.java',
              	'android/os/Handler.java',
              	'android/os/HandlerThread.java',
              	'android/os/IBinder.java',
              	'android/os/IInterface.java',
              	'android/os/IMessenger.java',
              	'android/os/Looper.java',
              	'android/os/MemoryFile.java',
              	'android/os/Message.java',
              	'android/os/MessageQueue.java',
              	'android/os/Messenger.java',
              	'android/os/Parcelable.java',
              	'android/os/ParcelFileDescriptor.java',
              	'android/os/PatternMatcher.java',
              	'android/os/PowerManager.java',
              	'android/os/Process.java',
              	'android/os/RemoteException.java',
              	'android/os/ResultReceiver.java',
              	'android/os/StatFs.java',
              	'android/os/SystemClock.java',
              	'android/os/Trace.java',
              	'android/os/UserHandle.java',
              	'android/os/storage/StorageManager.java',
              	'android/preference/PreferenceManager.java',
              	'android/provider/Settings.java',
              	'android/R.java',
              	'android/support/multidex/MultiDexApplication.java',
              	'android/support/v4/app/FragmentActivity.java',
              	'android/support/v7/app/AppCompatActivity.java',
              	'android/telephony/PhoneStateListener.java',
              	'android/telephony/TelephonyManager.java',
              	'android/text/ClipboardManager.java',
              	'android/text/Editable.java',
              	'android/text/GetChars.java',
              	'android/text/Html.java',
              	'android/text/InputFilter.java',
              	'android/text/NoCopySpan.java',
              	'android/text/Spannable.java',
              	'android/text/SpannableStringInternal.java',
              	'android/text/SpannableString.java',
              	'android/text/Spanned.java',
              	'android/text/SpannedString.java',
              	'android/text/SpanWatcher.java',
              	'android/text/TextPaint.java',
              	'android/text/TextUtils.java',
              	'android/text/TextWatcher.java',
              	'android/text/method/PasswordTransformationMethod.java',
              	'android/text/method/TransformationMethod.java',
              	'android/text/util/Linkify.java',
              	'android/util/AndroidException.java',
              	'android/util/AndroidRuntimeException.java',
              	'android/util/ArrayMap.java',
              	'android/util/AttributeSet.java',
              	'android/util/Base64DataException.java',
              	'android/util/Base64InputStream.java',
              	'android/util/Base64.java',
              	'android/util/Base64OutputStream.java',
              	'android/util/ContainerHelpers.java',
              	'android/util/DecompiledXmlResourceParser.java',
              	'android/util/DisplayMetrics.java',
              	'android/util/LayoutDirection.java',
              	'android/util/Log.java',
              	'android/util/LongSparseArray.java',
              	'android/util/MapCollections.java',
              	'android/util/PrefixPrinter.java',
              	'android/util/Printer.java',
              	'android/util/Slog.java',
              	'android/util/SparseArray.java',
              	'android/util/SparseIntArray.java',
              	'android/util/SparseBooleanArray.java',
              	'android/util/StateSet.java',
              	'android/util/TypedValue.java',
              	'android/util/Xml.java',
              	'android/util/XmlPullAttributes.java',
              	'android/view/animation/AccelerateInterpolator.java',
              	'android/view/animation/DecelerateInterpolator.java',
              	'android/view/animation/Interpolator.java',
              	'android/view/AbsSavedState.java',
              	'android/view/ActionMode.java',
              	'android/view/ContextThemeWrapper.java',
              	'android/view/Choreographer.java',
              	'android/view/Display.java',
              	'android/view/Gravity.java',
              	'android/view/InflateException.java',
              	'android/view/InputDevice.java',
              	'android/view/InputEvent.java',
              	'android/view/InputQueue.java',
              	'android/view/inputmethod/BaseInputConnection.java',
              	'android/view/inputmethod/InputConnection.java',
              	'android/view/inputmethod/InputMethodManager.java',
              	'android/view/KeyCharacterMap.java',
              	'android/view/KeyEvent.java',
              	'android/view/LayoutInflater.java',
              	'android/view/Menu.java',
              	'android/view/MenuInflater.java',
              	'android/view/MenuItem.java',
              	'android/view/MotionEvent.java',
              	'android/view/SubMenu.java',
              	'android/view/SurfaceHolder.java',
              	'android/view/Surface.java',
              	'android/view/SurfaceView.java',
              	'android/view/ViewConfiguration.java',
              	'android/view/ViewGroup.java',
              	'android/view/View.java',
              	'android/view/ViewManager.java',
              	'android/view/ViewParent.java',
              	'android/view/ViewTreeObserver.java',
              	'android/view/Window.java',
              	'android/view/WindowManagerImpl.java',
              	'android/view/WindowManager.java',
              	'android/view/animation/Animation.java',
              	'android/view/animation/AnimationUtils.java',
				'android/view/accessibility/AccessibilityManager.java',
				'android/view/textservice/TextServicesManager.java',
              	'android/webkit/DownloadListener.java',
              	'android/webkit/WebSettings.java',
              	'android/webkit/WebView.java',
              	'android/webkit/WebViewClient.java',
              	'android/widget/AdapterView.java',
              	'android/widget/Button.java',
              	'android/widget/CompoundButton.java',
              	'android/widget/EdgeEffect.java',
              	'android/widget/EditText.java',
              	'android/widget/FrameLayout.java',
              	'android/widget/HorizontalScrollView.java',
              	'android/widget/ImageButton.java',
              	'android/widget/ImageView.java',
              	'android/widget/LinearLayout.java',
              	'android/widget/ListView.java',
              	'android/widget/MediaController.java',
              	'android/widget/OverScroller.java',
              	'android/widget/PopupMenu.java',
              	'android/widget/ProgressBar.java',
              	'android/widget/RadioButton.java',
              	'android/widget/RelativeLayout.java',
              	'android/widget/Scroller.java',
              	'android/widget/ScrollView.java',
              	'android/widget/SeekBar.java',
              	'android/widget/TextView.java',
              	'com/android/internal/Manifest.java',
              	'com/android/internal/R.java',
              	'com/android/internal/util/ArrayUtils.java',
              	'com/android/internal/util/FastXmlSerializer.java',
              	'com/android/internal/util/XmlUtils.java',
              	'com/google/android/gles_jni/EGLImpl.java',
              	'com/google/android/gles_jni/GLImpl.java',
              	'com/google/android/vending/expansion/downloader/IDownloaderClient.java',
              	'com/google/android/vending/expansion/downloader/impl/DownloaderService.java',
              	'com/google/android/vending/licensing/LicenseCheckerCallback.java',
              	'com/google/android/vending/licensing/LicenseChecker.java',
              	'com/google/android/vending/licensing/Policy.java',
              	'com/htc/util/htcresutil/resutil.java',
              	'javax/microedition/khronos/egl/EGL10.java',
              	'javax/microedition/khronos/egl/EGL11.java',
              	'javax/microedition/khronos/egl/EGLConfig.java',
              	'javax/microedition/khronos/egl/EGLContext.java',
              	'javax/microedition/khronos/egl/EGLDisplay.java',
              	'javax/microedition/khronos/egl/EGL.java',
              	'javax/microedition/khronos/egl/EGLSurface.java',
              	'javax/microedition/khronos/opengles/GL10Ext.java',
              	'javax/microedition/khronos/opengles/GL10.java',
              	'javax/microedition/khronos/opengles/GL11ExtensionPack.java',
              	'javax/microedition/khronos/opengles/GL11Ext.java',
              	'javax/microedition/khronos/opengles/GL11.java',
              	'javax/microedition/khronos/opengles/GL.java',
              	'org/apache/harmony/xnet/provider/jsse/SSLParametersImpl.java',
              ],
              dependencies: [
              	declare_dependency(link_with: hax_arsc_lib_jar)
              ],
              java_args: [
              	'-bootclasspath', bootclasspath,
              	'-source', '1.7', '-target', '1.7',
              	'-h', join_paths(dir_base, 'src/api-impl-jni/generated_headers')
              ])
