hax_arsc_parser_jar = jar('hax_arsc_parser', [
                                             	'com/hq/arscresourcesparser/arsc/ResStringPoolRef.java',
                                             	'com/hq/arscresourcesparser/arsc/ResTableMap.java',
                                             	'com/hq/arscresourcesparser/arsc/ResTableTypeInfoChunk.java',
                                             	'com/hq/arscresourcesparser/arsc/ResStringPoolChunk.java',
                                             	'com/hq/arscresourcesparser/arsc/ResTableRef.java',
                                             	'com/hq/arscresourcesparser/arsc/BaseTypeChunk.java',
                                             	'com/hq/arscresourcesparser/arsc/ResTableValueEntry.java',
                                             	'com/hq/arscresourcesparser/arsc/ResFileHeaderChunk.java',
                                             	'com/hq/arscresourcesparser/arsc/ResValue.java',
                                             	'com/hq/arscresourcesparser/arsc/ResTableMapEntry.java',
                                             	'com/hq/arscresourcesparser/arsc/ResTableTypeSpecChunk.java',
                                             	'com/hq/arscresourcesparser/arsc/ChunkHeader.java',
                                             	'com/hq/arscresourcesparser/arsc/ArscFile.java',
                                             	'com/hq/arscresourcesparser/arsc/ResTableEntry.java',
                                             	'com/hq/arscresourcesparser/arsc/ResTablePackageChunk.java',
                                             	'com/hq/arscresourcesparser/arsc/ResTableConfig.java',
                                             	'com/hq/arscresourcesparser/ArscResourcesParser.java',
                                             	'com/hq/arscresourcesparser/common/Utils.java',
                                             	'com/hq/arscresourcesparser/stream/PositionInputStream.java'
                                             ],
                                             java_args: [
                                             	'-bootclasspath', join_paths(dir_base, 'jars/core-libart-hostdex_classes.jar'),
                                             	'-source', '1.7', '-target', '1.7'
                                             ])

